--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -159,6 +159,7 @@
     <p class="ttt">公司经营品牌云上山溪始终以“轻滋补，潮养生”为品牌理念；以“为君寻好物，踏遍天下路”为服务理念；以“质量第一，客户致上”为经营理念，为客户提供优质的滋补好食材。</p>
     <p class="ttt">我们将继续完善产品结构，扩大产品线，完善供应链，打造产业基地，开展跨境电商，改善办公仓储环境，增加人力储备，开启线上直播，加大信息技术研发投入，提升服务客户品质，增强抗风险能力，积极参与公益事业，开展兴农助农等相关项目。让“云上山溪”为客户带来更优质产品，使其成为家喻户晓的品牌。</p>
     <p class="ttt">欢迎有识之士加盟、投资、合作，一起向未来。</p>
+
     <div class="flexslider-info">
       <section class="slider">
         <div class="flexslider">
@@ -245,7 +246,7 @@
     </ul> -->
   </div>
   <p class="copyright"><a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
-  <!--    <p class="copyright"><a href="https://yunshangshanxi.tmall.com" target="_blank">天猫云上山溪旗舰店</a></p>-->
+  <p class="copyright"><a href="https://yunshangshanxi.com/apk/yssx.apk" target="_blank">下载内部仓库管理软件</a></p>
   <p class="copyright">客户服务热线：4001-789-360</p>
   <p class="copyright">版权所有 &copy; 2020-2022 云上山溪</p>
   <p class="copyright"><a href="//www.beian.miit.gov.cn" target="_blank">鲁ICP备2021043261号</a></p>
