--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -80,8 +80,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-              <li><a class=" active" href="#">青云之上，万山之中，寻遍天下好物。</a></li>
-              <li><a href="#">为君寻好物，踏遍天下路。</a></li>
+              <li><a class=" active" href="#">首页</a></li>
+              <li><a href="./scan.html">防伪验证</a></li>
             </ul>
 
           </div>
