--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -38,7 +38,7 @@
             <video id="video" width="100%" height="200" style="border: 0px solid gray"></video>
         </div>
 
-        <div id="sourceSelectPanel" style="display:none">
+        <div id="sourceSelectPanel">
             <label for="sourceSelect">选择摄像头:</label>
             <select id="sourceSelect" style="max-width:400px">
             </select>
@@ -74,11 +74,14 @@
           if (videoInputDevices.length >= 1) {
             videoInputDevices.forEach((element) => {
               const sourceOption = document.createElement('option')
-              sourceOption.text = element.label
+
               sourceOption.value = element.deviceId
               if(element.label.indexOf("facing back") != -1){
+                sourceOption.text = "后置"
                 sourceOption.selected = "selected"
                 selectedDeviceId = element.deviceId
+              }else{
+                sourceOption.text = "前置"
               }
               sourceSelect.appendChild(sourceOption)
             })
