--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -147,7 +147,7 @@
     var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
     httpRequest.open('POST', URL, true); //第二步：打开连接/***发送json格式文件必须设置请求头 ；如下 - */
     httpRequest.setRequestHeader("Content-type","application/json");//设置请求头 注：post方式必须设置请求头（在建立连接后设置请求头）var obj = { name: 'zhansgan', age: 18 };
-    httpRequest.send(PARAMS);//发送请求 将json写入send中
+    httpRequest.send(JSON.stringify(PARAMS));//发送请求 将json写入send中
     /**
      * 获取数据后的处理程序
      */
