--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -15,13 +15,15 @@
     <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
           href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
 </head>
-
+<style>
+    .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
+</style>
 <body>
 
 <main class="wrapper" style="padding-top:2em">
 
     <section class="container" id="demo-content">
-        <h1 class="title">云上山溪防伪验证</h1>
+        <h3 class="title">云上山溪防伪验证</h3>
 
         <p>
             <a class="button-small button-outline" href="https://yunshangshanxi.com/index.html">首页 🏡</a>
@@ -53,6 +55,10 @@
     <footer class="footer">
         <section class="container">
             <p>云上山溪防伪验证，自2024年1月1日开始全面接入防伪认证。请认准云上山溪防伪标签。</p>
+            <p class="copyright"><a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
+            <p class="copyright"><a href="./download/yssx.apk" target="_blank">下载 云上山溪一物一码App（仅限内部员工使用）</a></p>
+            <p class="copyright">客户服务热线：4001-789-360</p>
+            <p class="copyright">版权所有 &copy; 2020-2023 云上山溪 葛氏健康</p>
         </section>
     </footer>
 
