--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -23,14 +23,12 @@
 <main class="wrapper" style="padding-top:2em">
 
     <section class="container" id="demo-content">
-        <h3 class="title">云上山溪防伪验证</h3>
+<!--        <h3 class="title">云上山溪防伪验证</h3>-->
 
         <p>
-            <a class="button-small button-outline" href="https://yunshangshanxi.com/index.html">🏡 首页</a>
+            <a class="button-small button-outline" href="https://yunshangshanxi.com/index.html">🏡 返回公司网站</a>
         </p>
-
-        <p>扫描产品防伪码可验证产品真伪，请认准防伪标签。</p>
-
+<!--        <p>扫描产品防伪码可验证产品真伪，请认准防伪标签。</p>-->
         <div>
             <a class="button" id="startButton">扫描防伪码</a>
             <a class="button" id="resetButton" style="display: none;">重置</a>
@@ -46,19 +44,18 @@
             </select>
         </div>
 
-        <label>防伪码:</label>
-        <pre><code id="result"></code></pre>
-        <label>产品信息:</label>
+<!--        <label>防伪码:</label>-->
+<!--        <pre><code id="result"></code></pre>-->
+        <label>验证结果:</label>
         <pre><code id="product"></code></pre>
     </section>
 
     <footer class="footer">
         <section class="container">
-            <p>云上山溪防伪验证，自2024年1月1日开始全面接入防伪认证。请认准云上山溪防伪标签。</p>
-            <p class="copyright"><a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
-            <p class="copyright"><a href="./download/yssx.apk" target="_blank">下载 云上山溪一物一码App（仅限内部员工使用）</a></p>
-            <p class="copyright">客户服务热线：4001-789-360</p>
-            <p class="copyright">版权所有 &copy; 2020-2023 云上山溪 葛氏健康</p>
+            <p>请认准云上山溪防伪标签，谨防假冒。</p>
+            <p><a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
+            <p>客户服务热线：4001-789-360</p>
+            <p>版权所有 &copy; 2020-2023 云上山溪 葛氏健康</p>
         </section>
     </footer>
 
