--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -29,7 +29,7 @@
             <a class="button-small button-outline" href="https://yunshangshanxi.com/index.html">🏡 返回公司网站</a>
         </p>
 <!--        <p>扫描产品防伪码可验证产品真伪，请认准防伪标签。</p>-->
-        <div>
+        <div style="width:100%;text-align:center;">
             <a class="button" id="startButton">扫描防伪码</a>
             <a class="button" id="resetButton" style="display: none;">重置</a>
         </div>
