--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -47,15 +47,16 @@
 <!--        <label>防伪码:</label>-->
 <!--        <pre><code id="result"></code></pre>-->
         <label>验证结果:</label>
-        <pre><code id="product"></code></pre>
+        <pre><code id="result"></code>
+            <code id="product"></code></pre>
     </section>
 
     <footer class="footer">
         <section class="container">
             <p>请认准云上山溪防伪标签，谨防假冒。</p>
-            <p><a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
+            <p>购买产品请移步 <a href="https://mall.jd.com/index-1000385721.html" target="_blank">云上山溪京东自营旗舰店</a></p>
             <p>客户服务热线：4001-789-360</p>
-            <p>版权所有 &copy; 2020-2023 云上山溪 葛氏健康</p>
+            <p>版权所有 &copy; 2020-2023 云上山溪</p>
         </section>
     </footer>
 
