--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -47,8 +47,8 @@
 <!--        <label>防伪码:</label>-->
 <!--        <pre><code id="result"></code></pre>-->
         <label>验证结果:</label>
-        <pre><code id="result"></code>
-            <code id="product"></code></pre>
+        <pre><code id="result"></code></pre>
+        <pre><code id="product"></code></pre>
     </section>
 
     <footer class="footer">
