--- a/src/main/resources/static/scan.html
+++ b/src/main/resources/static/scan.html
@@ -45,7 +45,7 @@
         </div>
 
 <!--        <label>防伪码:</label>-->
-<!--        <pre><code id="result"></code></pre>-->
+
         <label>验证结果:</label>
         <pre><code id="result"></code></pre>
         <pre><code id="product"></code></pre>
@@ -141,8 +141,9 @@
           }),
         }).done(function (res) {
           document.getElementById('product').textContent = "未查到此产品信息。";
+
           if (res && res.data !== undefined) {
-            document.getElementById('product').textContent = res.data.name + " ("+res.data.psn +")，此产品是正品。";
+            document.getElementById('product').textContent = res.data.name + " ("+res.data.psn +")，此产品是正品，请放心使用。";
           }
         });
     }
